#加入缓存之前流程走通

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,15 @@ server.servlet.context-path=/shiro
 
 spring.mvc.view.prefix=/
 spring.mvc.view.suffix=.jsp
+
+#Êý¾Ý¿â
+spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
+spring.datasource.url=jdbc:mysql://localhost:3306/shiro?characterEncoding=UTF-8&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=4682739155
+#mybatis
+mybatis.type-aliases-package=com.lyming.shiro.chapter4.entity
+mybatis.mapper-locations=classpath:com/lyming/shiro/mapper/*.xml
+#show sql
+logging.level.com.lyming.shiro.mapper=debug
+#log
