--- a/pom.xml
+++ b/pom.xml
@@ -78,6 +78,11 @@
                 </exclusion>
             </exclusions>
         </dependency>
+        <!--redis整合springboot-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
