--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,9 @@ mybatis.mapper-locations=classpath:com/lyming/shiro/mapper/*.xml
 #show sql
 logging.level.com.lyming.shiro.mapper=debug
 #log
+
+#redis
+spring.redis.port=6379
+spring.redis.host=localhost
+spring.redis.database=0
+spring.redis.password=123456
